css/style.css
/* ... */
.social-list > li > a:hover {
  background-color: #EF2D56;
}
.social-list > li > a i {
  line-height: inherit;
}
.social-list.style-2 > li > a {
  width: 75px;
  height: 75px;
  line-height: 75px;
  font-size: 20px;
  background-color: transparent;
  color: #191b1d;
}
.social-list.style-2 > li > a:hover {
  color: #EF2D56;
  background-color: transparent;
}
.counter {
  margin: 25px 0;
  overflow: hidden;
}
.counter.block .counter-icon,
.counter.block .counter-content {
  width: auto;
  float: none;
  text-align: center;
}
.counter-icon {
  width: 30%;
  text-align: center;
  margin-right: 5%;
  float: left;
  font-size: 50px;
}
.counter-content {
  float: left;
  width: 65%;
  text-align: left;
}
.counter-content > h5 {
  font-size: 34px;
  margin-top: 0;
}
.counter-content > h5.cursive {
  font-size: 66px;
}
.counter-content > span {
  display: block;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 12px;
  letter-spacing: 1px;
}
.boxes [class*="col-"] {
  padding: 5%;
}
.client-image {
  max-width: 130px;
  display: block;
  margin: 0 auto;
}
.client-image:hover {
  -webkit-animation: animClient 1.2s both;
  animation: animClient 1.2s both;
}
/*
  01
  Navbar
*/
#topnav {
  position: fixed;
  right: 0;
  left: 0;
  top: 0;
  z-index: 1030;
  background-color: transparent;
  border: 0;
  -webkit-transition: all .5s ease;
  transition: all .5s ease;
  min-height: 62px;
}
#topnav.scroll {
  background-color: #fff;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
}
#topnav.scroll .navigation-menu > li > a {
  color: #191b1d;
}
#topnav.scroll .navigation-menu > li > a:hover {
  color: #EF2D56;
  background-color: transparent;
}
@media (min-width: 992px) {
  #topnav.scroll .navigation-menu > li > a {
    padding-top: 20px;
    padding-bottom: 20px;
  }
}
#topnav.scroll .navigation-menu > li.active > a {
  color: #EF2D56;
}
#topnav.scroll .menu-extras .menu-item {
  border-color: #eee;
}
#topnav.scroll .menu-extras .menu-item .cart > a,
#topnav.scroll .menu-extras .menu-item .search > a {
  color: #3d4146;
  line-height: 62px;
}
#topnav.scroll .menu-extras .menu-item .cart > a:hover,
#topnav.scroll .menu-extras .menu-item .search > a:hover {
  color: #EF2D56;
}
#topnav.scroll .navbar-toggle span {
  background-color: #191b1d;
}
#topnav .navbar-toggle {
  border: 0;
  position: relative;
  width: 60px;
  height: 62px;
  padding: 0;
  margin: 0;
  cursor: pointer;
}
#topnav .navbar-toggle .lines {
  width: 25px;
  display: block;
  position: relative;
  margin: 24px auto;
  height: 18px;
}
#topnav .navbar-toggle.open span {
  position: absolute;
}
#topnav .navbar-toggle.open span:first-child {
  top: 6px;
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}
#topnav .navbar-toggle.open span:nth-child(2) {
  visibility: hidden;
}
#topnav .navbar-toggle.open span:last-child {
  width: 100%;
  top: 6px;
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}
#topnav .navbar-toggle span {
  height: 1px;
  width: 100%;
  background-color: #fff;
  display: block;
  margin-bottom: 5px;
  -webkit-transition: -webkit-transform .5s ease;
  transition: -webkit-transform .5s ease;
  transition: transform .5s ease;
  transition: transform .5s ease, -webkit-transform .5s ease;
}
#topnav .navbar-toggle span:last-child {
  width: 75%;
  margin-bottom: 0;
}
#topnav .navbar-toggle:hover {
  background-color: transparent;
}
#topnav .navbar-toggle:hover span {
  background-color: #EF2D56;
}
#topnav .navbar-toggle:focus {
  background-color: transparent;
}
#topnav .navigation-menu {
  float: right;
  list-style: none;
  margin: 0;
  padding: 0;
}
#topnav .navigation-menu.center {
  list-style: none;
  margin: 0 auto;
  padding: 0;
  width: 443px;
  float: none !important;
}
#topnav .navigation-menu > li {
  float: left;
  display: block;
  position: relative;
}
#topnav .navigation-menu > li > a {
  display: block;
  color: #fff;
  font-size: 10px;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: 500;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  line-height: 20px;
  padding-left: 15px;
  padding-right: 15px;
}
#topnav .navigation-menu > li > a:hover,
#topnav .navigation-menu > li > a:focus {
  background-color: transparent;
  color: #EF2D56;
}
@media (min-width: 992px) {
  #topnav .navigation-menu > li > a {
    padding-top: 25px;
    padding-bottom: 25px;
    min-height: 62px;
  }
}
#topnav .navigation-menu > li .submenu li a i {
  margin-right: 5px;
}
#topnav .navigation-menu > li.has-submenu > a:after {
  content: "\e64b";
  font-family: "themify";
  margin-left: 3px;
}
#topnav .navigation-menu > li .submenu li span.label {
  padding: .2em .6em .3em;
  display: inline;
  background-color: #EF2D56;
  color: #fff;
  margin-left: 4px;
  font-size: 8px;
  font-weight: bold;
  line-height: 1;
}
#topnav .logo {
  float: left;
  padding: 16px 0;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
}
#topnav .logo img {
  max-height: 40px;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
}
#topnav .logo .logo-light {
  display: block;
}
#topnav .logo .logo-dark {
  display: none;
}
#topnav.scroll .logo {
  padding: 11px 0;
}
#topnav.scroll .logo .logo-light {
  display: none;
}
#topnav.scroll .logo .logo-dark {
  display: block;
}
#topnav.scroll.dark {
  background-color: #191b1d;
}
#topnav.scroll.dark .navigation-menu > li > a {
  color: #fff;
}
#topnav.scroll.dark .navigation-menu > li > a:hover {
  color: #EF2D56;
}
#topnav.scroll.dark .navigation-menu > li .submenu {
  background-color: #191b1d;
  border-color: #3d4146;
}
#topnav.scroll.dark .navigation-menu > li.active > a {
  color: #EF2D56;
}
#topnav.scroll.dark .menu-extras .menu-item {
  border-color: #3d4146;
}
#topnav.scroll.dark .menu-extras .menu-item .cart > a,
#topnav.scroll.dark .menu-extras .menu-item .search > a {
  color: #fff;
}
#topnav.scroll.dark .logo .logo-dark {
  display: none;
}
#topnav.scroll.dark .logo .logo-light {
  display: block;
}
/* ... */

